--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -12,7 +12,7 @@
       <h4 class="ld-name-text"><a ng-href="ld/{{ learningDesign.ld_id }}" >{{ learningDesign.ld_name }}</a></h4>
     </div>
     <div class="ld-bottom">
-        <a ng-href="#/ld/{{learningDesign.ld_id}}" class="starIcon"><i class="icon-star-empty icon-white"></i></a>
+        <a ng-href="#" class="starIcon"><i class="icon-star-empty icon-white"></i></a>
 
             <a ng-href="#" class="float-left">   {{ learningDesign.user_name }}&nbsp;{{ learningDesign.user_last_name }}    </a>
     </div>
