--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -116,18 +116,19 @@
                     <div ng-show="node.children" class="groupName">{{ node.name }}</div>
                     <div class="clearfix"></div>
                     <div ng-repeat="child in node.children" class="actBox">
-                        <a ng-href="#" class="whiteText"> <h6 class="actName">{{ child.name }}</h6>
-                        <div class="actLabel">
-                            <span class="timeLabel"><i class="icon-time icon-white"></i> 15 min </span>
-                            <span class="orgLabel"><i class="icon-th-large icon-white"></i> ALL</span>
-                        </div>
-                            </a>
+                        <a ng-href="#" class="whiteText" ng-click="open()"><h6 class="actName">{{ child.name }}</h6>
+
+                            <div class="actLabel">
+                                <span class="timeLabel"><i class="icon-time icon-white"></i> 15 min </span>
+                                <span class="orgLabel"><i class="icon-th-large icon-white"></i> ALL</span>
+                            </div>
+                        </a>
                     </div>
                     <!-- End Children -->
 
 
                     <!-- If it's NOT a group:  -->
-                    <div ng-show="!node.children" class="actName"><a ng-href="#" class="whiteText">
+                    <div ng-show="!node.children" class="actName"><a ng-href="#" class="whiteText" ng-click="open()">
                         <h6>{{ node.name }}</h6>
 
                         <div class="actLabel">
@@ -141,7 +142,129 @@
             </div>
             <!-- End Level Box -->
             <!-- END DYNAMIC ACTIVITY CONTENT-->
+            <div modal="shouldBeOpen" close="close()" options="opts">
+                <div class="modal-header">
+                    <h4>Activity Details</h4>
+                </div>
+                <div class="modal-body">
 
+                    <!--TODO: Filter node details depending on the click in a specific node-->
+                    <!-- BEGIN DYNAMIC ACTIVITY CONTENT -->
+                    <div ng-repeat="level in levels">
+                        <div ng-repeat="node in level.nodes | filter:node.name = 'Hardware Component Identification'"
+                             class="nodeTextDetails">
+
+                            <!-- If it's a group:  -->
+                            <div ng-show="node.children" class="groupBoxText">
+                                <h4 class="groupNameText">< {{ node.name }} ></h4>
+
+                                <div class="clearfix"></div>
+                                <div ng-repeat="child in node.children">
+                                    <h5 class="nodeNameTextDetails">{{ child.name }}</h5>
+
+                                    <p class="tabText"><i class="icon-home"></i> Modality: <span class="nodeBodyText">{ { activity.modality } }</span>
+                                    </p>
+
+                                    <p class="tabText"><i class="icon-time"></i> Duration: <span class="nodeBodyText">{ { activity.dur_mon, activity.dur_dd, activity.dur_hh, activity.dur_min } }</span>
+                                    </p>
+
+                                    <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
+                                            class="nodeBodyText">{ { students.type } }</span></p>
+
+                                    <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
+                                            class="nodeBodyText">{ { technology.name } }</span></p>
+
+                                    <p class="tabText"><i class="icon-briefcase"></i> Didactical Resources:
+                                    <ul class="listNode">
+                                        <li><i class="icon-chevron-right"></i> Name: <span class="nodeBodyText">{ { resource.name } }</span>
+                                            | Type:<span class="nodeBodyText"> { { resource.type } }</span> | Copyright: <span
+                                                    class="nodeBodyText">{ { resource.copy } }</span> |
+                                            Description: <span
+                                                    class="nodeBodyText">{ { resource.descr } }</span> | Link: <span
+                                                    class="nodeBodyText"><a
+                                                    ng-href="{ { resource.link } }">Link</a></span></li>
+                                        <ul>
+                                            <li><i class="icon-file"></i> Attached Files:</li>
+                                            <ul>
+                                                <li>Name: <span class="nodeBodyText">{ { file.name } }</span> |
+                                                    Size: <span
+                                                            class="nodeBodyText">{ { file.size } }</span> |
+                                                    Extension: <span
+                                                            class="nodeBodyText">{ { file.mime } }</span> | Link: <span
+                                                            class="nodeBodyText"><a ng-href="{ { file.uri } }">Link</a></span>
+                                                </li>
+                                            </ul>
+                                        </ul>
+
+                                    </ul>
+                                    </p>
+                                    <p class="tabText"><i class="icon-info-sign"></i> Activity Description:<br> <span
+                                            class="nodeBodyText">{ { activity.pract_descr } }</span></p>
+
+                                    <p class="tabText"><i class="icon-question-sign"></i> Pedagogical
+                                        Suggestions:<br> <span
+                                                class="nodeBodyText">{ { activity.edu_descr } }</span></p>
+
+                                </div>
+                            </div>
+                            <!-- End Children -->
+
+
+                            <!-- If it's NOT a group:  -->
+                            <div ng-show="!node.children"><h5 class="nodeNameTextDetails">{{ node.name }}</h5>
+
+                                <p class="tabText"><i class="icon-home"></i> Modality: <span class="nodeBodyText">{ { activity.modality } }</span>
+                                </p>
+
+                                <p class="tabText"><i class="icon-time"></i> Duration: <span class="nodeBodyText">{ { activity.dur_mon, activity.dur_dd, activity.dur_hh, activity.dur_min } }</span>
+                                </p>
+
+                                <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
+                                        class="nodeBodyText">{ { students.type } }</span></p>
+
+                                <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
+                                        class="nodeBodyText">{ { technology.name } }</span></p>
+
+                                <p class="tabText"><i class="icon-briefcase"></i> Didactical Resources:
+                                <ul class="listNode">
+                                    <li><i class="icon-chevron-right"></i> Name: <span class="nodeBodyText">{ { resource.name } }</span>
+                                        | Type:<span class="nodeBodyText"> { { resource.type } }</span> |
+                                        Copyright: <span
+                                                class="nodeBodyText">{ { resource.copy } }</span> | Description: <span
+                                                class="nodeBodyText">{ { resource.descr } }</span> | <span
+                                                class="nodeBodyText"><a
+                                                ng-href="{ { resource.link } }">Link</a></span></li>
+                                    <ul>
+                                        <li><i class="icon-file"></i> Attached Files:</li>
+                                        <ul>
+                                            <li>Name: <span class="nodeBodyText">{ { file.name } }</span> | Size: <span
+                                                    class="nodeBodyText">{ { file.size } }</span> | Extension: <span
+                                                    class="nodeBodyText">{ { file.mime } }</span> | <span
+                                                    class="nodeBodyText"><a ng-href="{ { file.uri } }">Link</a></span>
+                                            </li>
+                                        </ul>
+                                    </ul>
+
+                                </ul>
+                                </p>
+                                <p class="tabText"><i class="icon-info-sign"></i> Activity Description:<br> <span
+                                        class="nodeBodyText">{ { activity.pract_descr } }</span></p>
+
+                                <p class="tabText"><i class="icon-question-sign"></i> Pedagogical Suggestions:<br> <span
+                                        class="nodeBodyText">{ { activity.edu_descr } }</span></p>
+                            </div>
+                        </div>
+                        <!-- End Activity or Group Box -->
+                    </div>
+                    <!-- End Level Box -->
+                    <!-- END DYNAMIC ACTIVITY CONTENT-->
+
+
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-info cancel" ng-click="close()">Close</button>
+                </div>
+            </div>
 
             <div class="clearfix"></div>
         </div>
