--- a/client/css/app.css
+++ b/client/css/app.css
@@ -291,6 +291,10 @@ input.sidebarInput {
 
 }
 
+#model:hover {
+background-color: #990000;
+}
+
 .btnModelImg {
     width: 80px;
     float: left;
@@ -461,6 +465,51 @@ a.whiteText:hover {
     color: #FFFFFF;
     text-decoration: underline;
 }
+.likeButton {
+    background-color: #ddd;
+    border-radius: 4px;
+        text-align: center;
+    display: inline-block;
+float: left;
+    margin: 0 10px 5px 0;
+    height: 20px;
+
+}
+
+.likeButton a{
+    border-radius: 6px;
+    padding: 5px 8px 5px 5px;
+    font-weight: normal;
+color: #666666;
+}
+
+
+.likedButton {
+    background-color: #990000;
+    border-radius: 4px;
+    text-align: center;
+    display: inline-block;
+    float: left;
+    margin: -1px 10px 5px 0;
+    height: 20px;
+    border: 1px solid #FFFFFF;
+
+}
+
+.likedButton a{
+    border-radius: 6px;
+    padding: 5px 8px 5px 5px;
+    font-weight: normal;
+    color: #FFFFFF;
+}
+
+
+.likeButton:hover  {
+    background-color: #FFFFFF}
+
+
+.likedButton:hover  {
+    background-color: #dddddd}
 /* activity text
 ===================== */
 .nodeText {
@@ -903,9 +952,6 @@ input[type="checkbox"] {
     font-weight: normal;
 }
 
-.ld-bottom a:hover {
-    text-decoration: underline;
-}
 .qcer {
     float: left;
     width: 22px;
@@ -931,6 +977,10 @@ input[type="checkbox"] {
     display: inline-block;
     color: #666666;
 
+}
+
+.authorName a:hover, .likes a:hover {
+    background-color: #FFFFFF;
 }
 
 .likes a{
