--- a/client/views/partials/tempActivity.html
+++ b/client/views/partials/tempActivity.html
@@ -7,3 +7,53 @@
     </div>
 </div>
 <!-- END EXPERIMENT -->
+
+<!-- BEGIN EXPERIMENT -->
+<div ng-repeat="(level, nodes) in levels" class="levelBox">
+    <div ng-repeat="node in nodes" ng-class="getBoxClassExperiment(node)">
+        
+        <!-- IF it's NOT a group -->
+        <h6 class="actName">{{ node.target_name }}</h6>
+    </div>
+</div>
+<!-- END EXPERIMENT -->
+
+			<!-- BEGIN DYNAMIC ACTIVITY CONTENT -->
+            <div ng-repeat="(level, nodes) in levels" class="levelBox">
+                <div ng-repeat="node in nodes" ng-class="getBoxClassExperiment(node)">
+
+                    <!-- If it's a group:  -->
+                    <div ng-show="node.children" class="groupName">{{ node.target_name }}</div>
+                    <div class="clearfix"></div>
+
+                    <!-- Children are also in levels: Create unstyled div for each level -->
+                    <div ng-repeat="(childLevel, subChildren) in node.children">
+                        <div ng-repeat="child in subChildren" class="actBox">
+                            <a ng-href="#" class="whiteText" ng-click="open()"><h6 class="actName">{{ child.activity_name }}</h6>
+
+                                <!-- FIXME Convert static data to dynamic -->
+                                <div class="actLabel">
+                                    <span class="timeLabel"><i class="icon-time icon-white"></i> 15 min </span>
+                                    <span class="orgLabel"><i class="icon-th-large icon-white"></i> ALL</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- End Children -->
+
+
+                    <!-- If it's NOT a group:  -->
+                    <div ng-show="!node.children" class="actName"><a ng-href="#" class="whiteText" ng-click="open()">
+                        <h6>{{ node.target_name }}</h6>
+
+                        <div class="actLabel">
+                            <span class="timeLabel"><i class="icon-time icon-white"></i> 15 min </span>
+                            <span class="orgLabel"><i class="icon-th-large icon-white"></i> ALL</span>
+                        </div>
+                    </a>
+                    </div>
+                </div>
+                <!-- End Activity or Group Box -->
+            </div>
+            <!-- End Level Box -->
+            <!-- END DYNAMIC ACTIVITY CONTENT-->
