--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -153,7 +153,9 @@
             <!-- END DYNAMIC ACTIVITY CONTENT-->
             <div modal="shouldBeOpen" close="close()" options="opts">
                 <div class="modal-header">
-                    <h4>Activity Details</h4>
+                    <h4 >Activity Details</h4>
+                    <button class="btn modalButton float-right" ng-click="close()">x</button>
+                    <div class="clearfix"></div>
                 </div>
                 <div class="modal-body">
 
@@ -271,7 +273,6 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn modalButton" ng-click="close()">Close</button>
                 </div>
             </div>
 
