--- a/client/css/app.css
+++ b/client/css/app.css
@@ -84,7 +84,7 @@ a:hover {
 #sidebarHeader {
     background-color: #990000;
     color: #FFFFFF;
-    border: 2px dotted #FFFFFF;
+    border: 1px dashed #FFFFFF;
     text-align: center;
     padding: 5px;
     margin: 0 0 10px 0;
@@ -212,7 +212,7 @@ input.sidebarInput {
     background-color: #990000;
     text-align: center;
     padding: 3px;
-    border: 2px dotted #F5F4ED;
+    border: 1px dashed #F5F4ED;
 }
 
 #langLev {
@@ -257,7 +257,7 @@ input.sidebarInput {
     padding: 5px 10px;
     background-color: #0099CC;
     color: #FFFFFF;
-    border: 2px dotted #FFFFFF;
+    border: 1px dashed #FFFFFF;
 }
 
 #contentHeader h4 {
@@ -287,7 +287,7 @@ input.sidebarInput {
     margin: 8px 0 0 0;
     padding: 5px 0;
     height: 80px;
-    border: 2px dotted #FFFFFF;
+    border: 1px dashed #FFFFFF;
 
 }
 
@@ -603,10 +603,16 @@ ul.listNode li {
     border-top-right-radius: 6px;
     text-align: center;
     border-bottom: 2px solid #CCCCCC;
+    height: 30px;
 }
 
+
+.modal-header h4 {
+float: left;
+    margin: 5px 0 0 40px;
+}
 .modal-footer {
-    padding: 10px;
+    padding: 5px;
 }
 /* navbar
 ===================== */
@@ -723,13 +729,24 @@ ul.listNode li {
     margin: 10px;
 }
 
-#loginButton, .modalButton, .modalButton:hover {
+#loginButton {
     background: #0099CC none;
     color: #FFFFFF;
     font-weight: bold;
     text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65);
 }
 
+.modalButton, .modalButton:hover {
+    background: #FFFFFF;
+    color: #0099CC;
+    font-weight: bold;
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65);
+    border-radius: 22px;
+    width: 22px;
+    height:22px;
+    padding: 0;
+    margin: 5px;
+}
 
 
 #pwRec a {
@@ -1052,7 +1069,7 @@ input[type="checkbox"] {
     width: 95%;
     background-color: #FFFFFF;
     margin: 0 auto ;
-    border: 2px dotted #0099CC;
+    border: 1px dashed #0099CC;
     padding: 10px 5px;
 }
 
