--- a/client/views/partials/tempActivity.html
+++ b/client/views/partials/tempActivity.html
@@ -23,7 +23,7 @@
                 <div ng-repeat="node in nodes" ng-class="getBoxClassExperiment(node)">
 
                     <!-- If it's a group:  -->
-                    <div ng-show="node.children" class="groupName">{{ node.target_name }}</div>
+                    <div ng-show="node.children" class="groupName">{{ node.node_name }}</div>
                     <div class="clearfix"></div>
 
                     <!-- Children are also in levels: Create unstyled div for each level -->
@@ -44,8 +44,8 @@
 
                     <!-- If it's NOT a group:  -->
                     <div ng-show="!node.children" class="actName"><a ng-href="#" class="whiteText" ng-click="open()">
-                        <h6>{{ node.target_name }}</h6>
-
+                        <h6>{{ node.node_name }}</h6>
+                        <!-- FIXME Convert static data to dynamic -->
                         <div class="actLabel">
                             <span class="timeLabel"><i class="icon-time icon-white"></i> 15 min </span>
                             <span class="orgLabel"><i class="icon-th-large icon-white"></i> ALL</span>
