--- a/client/views/partials/404.html
+++ b/client/views/partials/404.html
@@ -1,3 +1,12 @@
 <div class="row-fluid top-margin">
-   <div class="span12 pagination-centered"><img src="../img/404_not_found.jpg" alt="header" /></div>
+    <div class="span7 offset3 marginTop">
+        <div class="boardTop"></div>
+        <div class="boardLeft"></div>
+        <div class="boardBody">
+            <h1>Error 404</h1>
+            <h3>Sorry, we couldn't find that page!</h3>
+        </div>
+    <div class="boardRight"></div>
+    <div class="boardBottom"></div>
+    </div>
 </div>
